FactureLlmBackend/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: llm-deployment
    namespace: facture-llm-production
spec:
    replicas: 1
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxUnavailable: 0
            maxSurge: 1
    selector:
        matchLabels:
            app: llm-deployment
    template:
        metadata:
            labels:
                app: llm-deployment
        spec:
            automountServiceAccountToken: false
            containers:
                -   name: llm-deployment
                    image: "rhaversen/facture-llm-backend:c6f739f748c63cd788a3ec2eb29e51d103163cdc"
                    imagePullPolicy: Always
                    livenessProbe:
                        httpGet:
                            path: api/service/livez
                            port: 5000
                        periodSeconds: 10
                        initialDelaySeconds: 15
                        failureThreshold: 5
                    readinessProbe:
                        httpGet:
                            path: api/service/readyz
                            port: 5000
                        periodSeconds: 10
                        initialDelaySeconds: 15
                        failureThreshold: 5
                    ports:
                        -   containerPort: 5000
