FactureLlmBackend/production/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: llm-service
    namespace: facture-llm-production
spec:
    type: ClusterIP
    selector:
        app: llm-deployment
    ports:
        -   port: 80
            targetPort: 5000
